--- a/tempo_backend/src/requirements.txt
+++ b/tempo_backend/src/requirements.txt
@@ -1,4 +1,3 @@
-bcrypt==3.2.0
 cffi==1.15.0
 click==6.7
 Flask==1.0.2
@@ -7,7 +6,7 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.1.1
 pycparser==2.19
-six==1.11.0
+six==1.15.0
 SQLAlchemy==1.4.32
 Werkzeug==0.14.1
-requests==2.27.1
+spotipy==2.19.0
